Switch from lein-bin to lein-binplus